--- a/PROJECT/basic_css_demo_1.html
+++ b/PROJECT/basic_css_demo_1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Basic Tamplet</title> 
-<link  rel="stylesheet" type="text/css" href="Basic-html-css_NEW/PROJECT/CSS/basic_style.css"></link>
+<link  rel="stylesheet" href="./CSS/basic_style.css">
 </head>
 <body>
 
