--- a/error assigment detail.html
+++ b/error assigment detail.html
@@ -1,23 +1,24 @@
 <html>
-
-<header><titled>This is the Title</titled>
+<head>
+    <title>This is the Title</title>
 <style>
 img {
     border: 2px dashed red;  
 }
-h3 {text-align: center
+h3 {text-align: center;  "color:darkblue"
 }
+
 </style>
 <body style="background-color:lightblue;">
 
 <font-color="darkblue">
 </head>
 
-<h1>This is the Heading 1</h1>
+<h1><p style="color:darkblue">This is the Heading 1</h1></p>
 
-<h2>Thsi is the Heading 2 element</h2>
+<h2><p style="color:darkblue">Thsi is the Heading 2 element</h2></p>
 
-<p><strong>I am a bold student of The Tech Academy.</strong></p>
+<p style="color:darkblue"><strong>I am a bold student of The Tech Academy.</strong></p>
 
 <p><a href="https://www.learncodinganywhere.com"> This is The Tech Academy's website.</a></p>
 
@@ -26,7 +27,7 @@ h3 {text-align: center
 alt="The Tech Academy Logo"
 >
 
-<h3>Have you seen The Tech Academy's Student Orientation video?</h3>
+<h3><p style="color:darkblue">Have you seen The Tech Academy's Student Orientation video?</h3></p>
 
 <iframe width="560" height="315" allowfullscreen;
 src="https://ttamediaservices-uswe.streaming.media.azure.net/04ce32f6-b9fa-4e02-8c47-3e5632d92a41/html_intro_final.mp4"></iframe>
