--- a/PROJECT/index.html
+++ b/PROJECT/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Fantasy Land | Resort</title>
+<link rel="stylesheet" href=".PROJECT/CSS/index_style.css">
 </head>
 <body>
 
