--- a/One-Page Website/one_page_website_.html
+++ b/One-Page Website/one_page_website_.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 
 <h1><title>Planet Bloom</title><h1/>
+<link rel="stylesheet" href="./css/one_page_website.css">
 <p><div class="a" style="color:#F08080"><h1>Planet Bloom<h1></p>
 </div>
 
