--- a/One-Page Website/one_page_website_.html
+++ b/One-Page Website/one_page_website_.html
@@ -14,7 +14,7 @@
 <img src="./image/lotus.jpg"alt="From Planet Bloom">
 <div class="a" style="color:#00FFFF"><h3>Visit Us!</h3></div>
 
-<iframe width="560" height="345" src="https://youtu.be/1on5H_kqlFs" title="YouTube player" frameborder="2" allow="accelerometer; autoplay;clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="420" height="345" src="https://youtu.be/1on5H_kqlFs"></iframe> 
 
 <div class="a" style="color:#F08080">
 <h3 id="C4"> RESERVATIONS &darr;</h3>
