--- a/bootstra4_project/academy_cinemas.html
+++ b/bootstra4_project/academy_cinemas.html
@@ -43,9 +43,73 @@
     </div>
   </div>
 
+  <div class="container">
+   <div class= "row">
+     <div class="col-sm"
+      <img class="img-fluid" src="./images/images (10).jpg" alt="popcorn"/>
 
 
-    </div>
+      </div>
+      <div class="col-sm"
+
+<h3>Accomodations:</h3>
+<p>Located in beautiful Portland, Oregon,s Pearl district, our reels have been sprinning since 1959</p>
+<p>Showing our guests a great time is our passion and seeing their smiles is our pleasure</p>
+<p>All of our auditoriums are equiped with brand new christie 3d&reg; soun systems!</p>
+<p>Relax in our, extra-wide, plush cushioning recliners, our seating arrangement is disability friendly &#9855;.</p>
+
+  </div>
+  <div class="col-sm">
+
+
+<h3>Now Playing:</h3>
+<ul class="list-group">
+  <li class="list-group-item">
+    <a class="nav-link" href="./images/images.jpg">Sponge BOB</a>
+  </li>
+  <li class="list-group-item">
+    <a class="nav-link" href="./images/images (1).jpg">Romance</a>
+  </li>
+  <li class="list-group-item">
+    <a class="nav-link" href="./images/images (9).jpg">Jakobs Wife</a>
+  </li>
+</ul>
+  </div>
+  </div>
+</div>
+
+
+<!--SHOWTIMES-->
+<!---/SHOWTIMES-->
+<div class="text-center" >
+<form>
+  <h1 class="text-primary my-5">Sign up for  Movie Club Reward!</h1>
+  <div class="form-group">
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+</div>
+
+<div class="container my-5">
+  <ul class="nav nav-inline">
+    <li class="nav-item">
+      <small><a class="nav-link actie" href="#">Movie Rewards</a></small>
+    </li> 
+    <li class="nav-item">
+      <small><a class="nav-link" href="#">Movies@news.org</a></small>
+    </li>
+    <li class="nav-item">
+      <small><a class="nav-link" href="#">Info@academycinemas.com</a></small>
+    </li>
+    <li class="nav-item">
+      <small><a class="nav-link">&copy;2019 Academy Cinemas</a></small>
+    </li>
+  </ul>
+</div>
+
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
