--- a/PROJECT/css_menu_rollover.html
+++ b/PROJECT/css_menu_rollover.html
@@ -10,10 +10,10 @@
 
 <div class="wrap">
      <div class="menu-container">
-        <ul class="menu"
+        <ul class="menu"></ul>
             <li>Home</li>
             <li>About</li>
-            <li>Portfolio
+            <li>Portfolio </li> 
                 <ul class="submenu">
                     <li>Page 1</li>
                     <li>Page 2</li>
