--- a/PROJECT/css_menu_rollover.html
+++ b/PROJECT/css_menu_rollover.html
@@ -3,17 +3,17 @@
 <head>
 <meta charset="utf-8">
 <title>Basic HTML Template</title>
-<link rel="stylesheet" href="CSS/menu.rollover.css">
+<link rel="stylesheet" href="CSS/menu_rollover.css">
 </head>
 <body>
 
 
 <div class="wrap">
      <div class="menu-container">
-        <ul class="menu"></ul>
+        <ul class="menu">
             <li>Home</li>
             <li>About</li>
-            <li>Portfolio </li> 
+            <li>Portfolio 
                 <ul class="submenu">
                     <li>Page 1</li>
                     <li>Page 2</li>
