--- a/bootstra4_project/academy_cinemas.html
+++ b/bootstra4_project/academy_cinemas.html
@@ -50,9 +50,9 @@
 
 
     </div>
-      <div class="col-sm"></div>
+      <div class="col-sm">
 
-<h3 id="#a">Accomodations:</h3>
+<h3 id="a">Accomodations:</h3>
 <p>Located in beautiful Portland, Oregon,s Pearl district, our reels have been sprinning since 1959</p>
 <p>Showing our guests a great time is our passion and seeing their smiles is our pleasure</p>
 <p>All of our auditoriums are equiped with brand new christie 3d&reg; soun systems!</p>
@@ -62,7 +62,7 @@
   <div class="col-sm">
 
 
-<h3 id="#s">Now Playing:</h3>
+<h3 id="s">Now Playing:</h3>
 <ul class="list-group">
   <li class="list-group-item">
     <a class="nav-link" href="./images/images.jpg">Sponge BOB</a>
@@ -83,7 +83,7 @@
 <!---/SHOWTIMES-->
 <div class="text-center" >
 <form>
-  <h1 id="#d" class="text-primary my-5">Sign up for  Movie Club Reward!</h1>
+  <h1 id="d" class="text-primary my-5">Sign up for  Movie Club Reward!</h1>
   <div class="form-group">
     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
   </div>
