--- a/bootstra4_project/academy_cinemas.html
+++ b/bootstra4_project/academy_cinemas.html
@@ -52,6 +52,7 @@
     </div>
       <div class="col-sm">
 
+
 <h3 id="a">Accomodations:</h3>
 <p>Located in beautiful Portland, Oregon,s Pearl district, our reels have been sprinning since 1959</p>
 <p>Showing our guests a great time is our passion and seeing their smiles is our pleasure</p>
@@ -62,7 +63,7 @@
   <div class="col-sm">
 
 
-<h3 id="s">Now Playing:</h3>
+<h3>Now Playing:</h3>
 <ul class="list-group">
   <li class="list-group-item">
     <a class="nav-link" href="./images/images.jpg">Sponge BOB</a>
@@ -80,7 +81,38 @@
 
 
 <!--SHOWTIMES-->
+
+<div id="s"class="card-group">
+  <div class="card">
+    <img class="card-img-top" src="./images/images.jpg" alt="Sponge Bob">
+    <div class="card-body">
+      <h5 class="card-title">Sponge Bob</h5>
+      <p class="card-text">Follow the amazing adventures of Sponge Bob and his friends.In search of a new mission while discovering the great "Hidden Underwarter mistery city"</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="./images/images (1).jpg" alt="Romance">
+    <div class="card-body">
+      <h5 class="card-title">Not your Romance in Paradice</h5>
+      <p class="card-text">After accepting to go on a unwanted vacation with her family, Marina takes a break from her busy life to find an unexpected connection with a college-undergrad rival, that turns out to become the love of her life .</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="./images/images (9).jpg" alt="Jakobs wife">
+    <div class="card-body">
+      <h5 class="card-title">Jakob's Wife</h5>
+      <p class="card-text">Passion, Love and Commitment are all expected qualities in a marriage. Jakob a recognized prist in his city goes above and beyond to save his wife (who does not want to be saved) from the hidden Lord of the darkness</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+</div>
+
+
+
 <!---/SHOWTIMES-->
+
 <div class="text-center" >
 <form>
   <h1 id="d" class="text-primary my-5">Sign up for  Movie Club Reward!</h1>
@@ -90,6 +122,7 @@
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 </div>
+
 
 <div class="container my-5">
   <ul class="nav nav-inline">
@@ -107,7 +140,6 @@
     </li>
   </ul>
 </div>
-
 
 
 
