--- a/bootstra4_project/academy_cinemas.html
+++ b/bootstra4_project/academy_cinemas.html
@@ -54,6 +54,7 @@
 
 
 <h3 id="a">Accomodations:</h3>
+<span class="badge badge-pill badge-info">Info</span>
 <p>Located in beautiful Portland, Oregon,s Pearl district, our reels have been sprinning since 1959</p>
 <p>Showing our guests a great time is our passion and seeing their smiles is our pleasure</p>
 <p>All of our auditoriums are equiped with brand new christie 3d&reg; soun systems!</p>
@@ -81,30 +82,53 @@
 
 
 <!--SHOWTIMES-->
-
-<div id="s"class="card-group">
+<h3 id="s">ShowTime:</h3>
+<div class="card-group">
   <div class="card">
     <img class="card-img-top" src="./images/images.jpg" alt="Sponge Bob">
     <div class="card-body">
       <h5 class="card-title">Sponge Bob</h5>
       <p class="card-text">Follow the amazing adventures of Sponge Bob and his friends.In search of a new mission while discovering the great "Hidden Underwarter mistery city"</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <span class="badge badge-pill badge-info">12:00 p.m</span>
+        <span class="badge badge-pill badge-info">1:30 p.m</span>
+        <span class="badge badge-pill badge-info">3:00 p.m</span>
+        <span class="badge badge-pill badge-info">5:30 p.m</span>
+        <span class="badge badge-pill badge-info">7:00 p.m</span>
+        <span class="badge badge-pill badge-info">9:30 p.m</span>
+        <p class="card-text">
+        <small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
+
   <div class="card">
     <img class="card-img-top" src="./images/images (1).jpg" alt="Romance">
     <div class="card-body">
       <h5 class="card-title">Not your Romance in Paradice</h5>
       <p class="card-text">After accepting to go on a unwanted vacation with her family, Marina takes a break from her busy life to find an unexpected connection with a college-undergrad rival, that turns out to become the love of her life .</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <span class="badge badge-pill badge-info">12:00 p.m</span>
+        <span class="badge badge-pill badge-info">1:30 p.m</span>
+        <span class="badge badge-pill badge-info">3:00 p.m</span>
+        <span class="badge badge-pill badge-info">5:30 p.m</span>
+        <span class="badge badge-pill badge-info">7:00 p.m</span>
+        <span class="badge badge-pill badge-info">9:30 p.m</span>
+        <p class="card-text">
+        <small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
+
   <div class="card">
     <img class="card-img-top" src="./images/images (9).jpg" alt="Jakobs wife">
     <div class="card-body">
       <h5 class="card-title">Jakob's Wife</h5>
       <p class="card-text">Passion, Love and Commitment are all expected qualities in a marriage. Jakob a recognized prist in his city goes above and beyond to save his wife (who does not want to be saved) from the hidden Lord of the darkness</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <span class="badge badge-pill badge-info">12:00 p.m</span>
+        <span class="badge badge-pill badge-info">1:30 p.m</span>
+        <span class="badge badge-pill badge-info">3:00 p.m</span>
+        <span class="badge badge-pill badge-info">5:30 p.m</span>
+        <span class="badge badge-pill badge-info">7:00 p.m</span>
+        <span class="badge badge-pill badge-info">9:30 p.m</span>
+      <p class="card-text">
+        <small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
 </div>
