--- a/space resort/index.html
+++ b/space resort/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>Fantasy Land | Resort</title>
-<link rel="stylesheet" href=".file:///C:/Users/12108/OneDrive/Desktop/Basic-html-css_NEW/shared.css">
-<link rel="stylesheet" herf=".file:///C:/Users/12108/OneDrive/Desktop/Basic-html-css_NEW/animations.css">
+<link rel="stylesheet" href="./shared.css">
+<link rel="stylesheet" herf="./animations.css">
 </head>
 <body>
 
@@ -39,7 +39,7 @@
     <!--PHOTO-CONTAINER 1-->
 <div class="photo-container">
     <div class= "photo">
-    <img src="./Basic-html-css_NEW/Thumb/thumbnail(1).jpg"alt="FantasyGarden">
+    <img src="./Thumb/thumbnail(1).jpg"alt="FantasyGarden">
     <div class="photo-overlay">
     <h3>Click here to Enlarge</h3>
     <p>We have daily Activities with new and excitings ammenities, get your thickets now</p>
@@ -51,7 +51,7 @@
     <!--PHOTO-CONTAINER 2-->
 <div class="photo-container">
     <div class= "photo">
-    <img src="./Basic-html-css_NEW/Thumb/thumbnail (2).jpg"alt="Dream City">
+    <img src="./Thumb/thumbnail (2).jpg"alt="Dream City">
     <div class="photo-overlay">
     <h3>Click here to Enlarge</h3>
     <p>We have daily Activities with new and excitings ammenities, get your thickets now</p>
@@ -63,7 +63,7 @@
     <!--PHOTO-CONTAINER 3-->
 <div class="photo-container">
     <div class= "photo">
-    <img src="./Basic-html-css_NEW/Thumb/thumbnail(3).jpg"alt="Fantasy Galactial View">
+    <img src="./Thumb/thumbnail(3).jpg"alt="Fantasy Galactial View">
     <div class="photo-overlay">
     <h3>Click here to Enlarge</h3>
     <p>We have daily Activities with new and excitings ammenities, get your thickets now</p>
@@ -75,7 +75,7 @@
 <!--PHOTO-CONTAINER 4-->
 <div class="photo-container">
     <div class= "photo">
-    <img src="./Basic-html-css_NEW/Thumb/thumbnail(4).jpg"alt="Fantacy Mounytains">
+    <img src="./Thumb/thumbnail(4).jpg"alt="Fantacy Mounytains">
     <div class="photo-overlay">
     <h3>Click here to Enlarge</h3>
     <p>We have daily Activities with new and excitings ammenities, get your thickets now</p>
@@ -87,7 +87,7 @@
    <!--PHOTO-CONTAINER 5-->
 <div class="photo-container">
     <div class= "photo">
-    <img src="./Basic-html-css_NEW/Thumb/thumbnail(5).jpg"alt="Fantasy Beach">
+    <img src="./Thumb/thumbnail(5).jpg"alt="Fantasy Beach">
     <div class="photo-overlay">
     <h3>Click here to Enlarge</h3>
     <p>We have daily Activities with new and excitings ammenities, get your thickets now</p>
@@ -99,7 +99,7 @@
     <!--PHOTO-CONTAINER 6-->
 <div class="photo-container">
     <div class= "photo">
-    <img src="./Basic-html-css_NEW/Thumb/thumbnail(6).jpg"alt="Fantasy Amusment Park">
+    <img src="./Thumb/thumbnail(6).jpg"alt="Fantasy Amusment Park">
     <div class="photo-overlay">
     <h3>Click here to Enlarge</h3>
     <p>We have daily Activities with new and excitings ammenities, get your thickets now</p>
@@ -111,7 +111,7 @@
     <!--PHOTO-CONTAINER 7-->
 <div class="photo-container">
     <div class= "photo">
-    <img src="./Basic-html-css_NEW/Thumb/thumbnail(7).jpg"alt="Fantasy Planet bloom">
+    <img src="./Thumb/thumbnail(7).jpg"alt="Fantasy Planet bloom">
     <div class="photo-overlay">
     <h3>Click here to Enlarge</h3>
     <p>We have daily Activities with new and excitings ammenities, get your thickets now</p>
@@ -123,7 +123,7 @@
     <!--PHOTO-CONTAINER 8-->
 <div class="photo-container">
     <div class= "photo">
-    <img src="./Basic-html-css_NEW/Thumb/thumbnail(8).jpg"alt="Fantasy Air Ballon Travel">
+    <img src="./Thumb/thumbnail(8).jpg"alt="Fantasy Air Ballon Travel">
     <div class="photo-overlay">
     <h3>Click here to Enlarge</h3>
     <p>We have daily Activities with new and excitings ammenities, get your thickets now</p>
@@ -135,7 +135,7 @@
    <!--PHOTO-CONTAINER 9-->
 <div class="photo-container">
     <div class= "photo">
-    <img src="./Basic-html-css_NEW/Thumb/thumbnail(9).jpg"alt="Fantasy firepit">
+    <img src="./Thumb/thumbnail(9).jpg"alt="Fantasy firepit">
     <div class="photo-overlay">
     <h3>Click here to Enlarge</h3>
     <p>We have daily Activities with new and excitings ammenities, get your thickets now</p>
