--- a/PROJECT/basic_template.html
+++ b/PROJECT/basic_template.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 <meta charset="utf-8">
-<title>Basic Tamplet</title>
+<title>React_2</title>
+<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin>
+</script>
+<script src="https://umpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin>
+</script>
 </head>
+
 <body>
+<script>
+    const X=React.createElement;
 
-<div>
-<h1>Basisc CSS Demo</h1>
-</div>
+    class likeButton extends React.Component{
+        constructor(props) {
+            super(props);
+            this.state= { like:false};
+        }
+        render() {
+            if (this.state.linked) {
+                return'You clicked the like button!';
+            }
+            return X (
+                'button',
+                {onClick: () => this.setState ({ liked: true )} },
+                'Like'
+            ) ;
+        }
+    }
 
-<div class="container">
-<div class="squares">
-<p>Box 1</p>
-</div>
-
-<div class="squares">
-<p>Box 2</p>
-</div>
-
-<div class="squares">
-<p>Box 3</p>
-</div>
-
-<div class="squares">
-<p>Box 4</p>
-</div>
-
-</div>
+    const domContainer=document.querySelector('#like_button_container');
+    ReactDOM.render(X( likeButton) , domContainer);
+</script>
 </body>
+
 </html>
